# expt-rust-lambda

./: README.md
app/: Cargo.toml
app/src/: main.rs
